--- a/shogun-colors-tattoo/src/components/button/button.module.css
+++ b/shogun-colors-tattoo/src/components/button/button.module.css
@@ -1,5 +1,5 @@
 .container {
-  min-width: 500px;
+  max-width: 200px;
   border: none;
   cursor: pointer;
   font-size: var(--font-size-5);
