--- a/shogun-colors-tattoo/src/components/navbar/navbar-mobile/navbar-mobile.module.css
+++ b/shogun-colors-tattoo/src/components/navbar/navbar-mobile/navbar-mobile.module.css
@@ -8,6 +8,7 @@
   -webkit-backdrop-filter: blur(7px);
   box-shadow: inset 0 -20px 50px 20px var(--background-secondary);
   z-index: 100;
+  overflow: visible;
 
   animation: startNavbar 0.5s cubic-bezier(0.58, 1.16, 0.77, 0.37) 0.9s forwards;
   animation-fill-mode: backwards;
